generated/NPCScriptParser.cpp

// Generated from NPCScript.g4 by ANTLR 4.13.2


#include "NPCScriptListener.h"
#include "NPCScriptVisitor.h"

#include "NPCScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct NPCScriptParserStaticData final {
  NPCScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  NPCScriptParserStaticData(const NPCScriptParserStaticData&) = delete;
  NPCScriptParserStaticData(NPCScriptParserStaticData&&) = delete;
  NPCScriptParserStaticData& operator=(const NPCScriptParserStaticData&) = delete;
  NPCScriptParserStaticData& operator=(NPCScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag npcscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<NPCScriptParserStaticData> npcscriptParserStaticData = nullptr;

void npcscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (npcscriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(npcscriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<NPCScriptParserStaticData>(
    std::vector<std::string>{
      "program", "npcDefinition", "stateDefinition", "onEvent", "statement", 
      "ifStatement", "whileStatement", "transitionStatement", "assignment", 
      "sayStatement", "choiceStatement", "choiceOption", "emotionStatement", 
      "animationStatement", "waitStatement", "actionStatement", "condition", 
      "comparator", "expr"
    },
    std::vector<std::string>{
      "", "'npc'", "'iniciaEn'", "'@estado'", "'on'", "'end'", "'if'", "'then'", 
      "'goto'", "'while'", "'do'", "';'", "'='", "'say'", "'choice'", "'{'", 
      "'}'", "'->'", "'emotion'", "'('", "')'", "'playAnimation'", "'wait'", 
      "'seconds'", "'ms'", "','", "'=='", "'!='", "'<'", "'>'", "'<='", 
      "'>='", "'+'", "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "STRING", "IDENTIFIER", "NUMBER", "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  npcscriptParserStaticData = std::move(staticData);
}

}

NPCScriptParser::NPCScriptParser(TokenStream *input) : NPCScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

NPCScriptParser::NPCScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  NPCScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *npcscriptParserStaticData->atn, npcscriptParserStaticData->decisionToDFA, npcscriptParserStaticData->sharedContextCache, options);
}

NPCScriptParser::~NPCScriptParser() {
  delete _interpreter;
}

const atn::ATN& NPCScriptParser::getATN() const {
  return *npcscriptParserStaticData->atn;
}

std::string NPCScriptParser::getGrammarFileName() const {
  return "NPCScript.g4";
}

const std::vector<std::string>& NPCScriptParser::getRuleNames() const {
  return npcscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& NPCScriptParser::getVocabulary() const {
  return npcscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView NPCScriptParser::getSerializedATN() const {
  return npcscriptParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

NPCScriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NPCScriptParser::ProgramContext::EOF() {
  return getToken(NPCScriptParser::EOF, 0);
}

std::vector<NPCScriptParser::NpcDefinitionContext *> NPCScriptParser::ProgramContext::npcDefinition() {
  return getRuleContexts<NPCScriptParser::NpcDefinitionContext>();
}

NPCScriptParser::NpcDefinitionContext* NPCScriptParser::ProgramContext::npcDefinition(size_t i) {
  return getRuleContext<NPCScriptParser::NpcDefinitionContext>(i);
}

std::vector<NPCScriptParser::StateDefinitionContext *> NPCScriptParser::ProgramContext::stateDefinition() {
  return getRuleContexts<NPCScriptParser::StateDefinitionContext>();
}

NPCScriptParser::StateDefinitionContext* NPCScriptParser::ProgramContext::stateDefinition(size_t i) {
  return getRuleContext<NPCScriptParser::StateDefinitionContext>(i);
}

std::vector<NPCScriptParser::OnEventContext *> NPCScriptParser::ProgramContext::onEvent() {
  return getRuleContexts<NPCScriptParser::OnEventContext>();
}

NPCScriptParser::OnEventContext* NPCScriptParser::ProgramContext::onEvent(size_t i) {
  return getRuleContext<NPCScriptParser::OnEventContext>(i);
}


size_t NPCScriptParser::ProgramContext::getRuleIndex() const {
  return NPCScriptParser::RuleProgram;
}

void NPCScriptParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void NPCScriptParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any NPCScriptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::ProgramContext* NPCScriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, NPCScriptParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 26) != 0)) {
      setState(41);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case NPCScriptParser::T__0: {
          setState(38);
          npcDefinition();
          break;
        }

        case NPCScriptParser::T__2: {
          setState(39);
          stateDefinition();
          break;
        }

        case NPCScriptParser::T__3: {
          setState(40);
          onEvent();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(46);
    match(NPCScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NpcDefinitionContext ------------------------------------------------------------------

NPCScriptParser::NpcDefinitionContext::NpcDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> NPCScriptParser::NpcDefinitionContext::STRING() {
  return getTokens(NPCScriptParser::STRING);
}

tree::TerminalNode* NPCScriptParser::NpcDefinitionContext::STRING(size_t i) {
  return getToken(NPCScriptParser::STRING, i);
}


size_t NPCScriptParser::NpcDefinitionContext::getRuleIndex() const {
  return NPCScriptParser::RuleNpcDefinition;
}

void NPCScriptParser::NpcDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNpcDefinition(this);
}

void NPCScriptParser::NpcDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNpcDefinition(this);
}


std::any NPCScriptParser::NpcDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitNpcDefinition(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::NpcDefinitionContext* NPCScriptParser::npcDefinition() {
  NpcDefinitionContext *_localctx = _tracker.createInstance<NpcDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, NPCScriptParser::RuleNpcDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(NPCScriptParser::T__0);
    setState(49);
    match(NPCScriptParser::STRING);
    setState(50);
    match(NPCScriptParser::T__1);
    setState(51);
    match(NPCScriptParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StateDefinitionContext ------------------------------------------------------------------

NPCScriptParser::StateDefinitionContext::StateDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NPCScriptParser::StateDefinitionContext::STRING() {
  return getToken(NPCScriptParser::STRING, 0);
}

std::vector<NPCScriptParser::StatementContext *> NPCScriptParser::StateDefinitionContext::statement() {
  return getRuleContexts<NPCScriptParser::StatementContext>();
}

NPCScriptParser::StatementContext* NPCScriptParser::StateDefinitionContext::statement(size_t i) {
  return getRuleContext<NPCScriptParser::StatementContext>(i);
}


size_t NPCScriptParser::StateDefinitionContext::getRuleIndex() const {
  return NPCScriptParser::RuleStateDefinition;
}

void NPCScriptParser::StateDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStateDefinition(this);
}

void NPCScriptParser::StateDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStateDefinition(this);
}


std::any NPCScriptParser::StateDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitStateDefinition(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::StateDefinitionContext* NPCScriptParser::stateDefinition() {
  StateDefinitionContext *_localctx = _tracker.createInstance<StateDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, NPCScriptParser::RuleStateDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(NPCScriptParser::T__2);
    setState(54);
    match(NPCScriptParser::STRING);
    setState(58);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 137445532480) != 0)) {
      setState(55);
      statement();
      setState(60);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OnEventContext ------------------------------------------------------------------

NPCScriptParser::OnEventContext::OnEventContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NPCScriptParser::OnEventContext::STRING() {
  return getToken(NPCScriptParser::STRING, 0);
}

std::vector<NPCScriptParser::StatementContext *> NPCScriptParser::OnEventContext::statement() {
  return getRuleContexts<NPCScriptParser::StatementContext>();
}

NPCScriptParser::StatementContext* NPCScriptParser::OnEventContext::statement(size_t i) {
  return getRuleContext<NPCScriptParser::StatementContext>(i);
}


size_t NPCScriptParser::OnEventContext::getRuleIndex() const {
  return NPCScriptParser::RuleOnEvent;
}

void NPCScriptParser::OnEventContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOnEvent(this);
}

void NPCScriptParser::OnEventContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOnEvent(this);
}


std::any NPCScriptParser::OnEventContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitOnEvent(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::OnEventContext* NPCScriptParser::onEvent() {
  OnEventContext *_localctx = _tracker.createInstance<OnEventContext>(_ctx, getState());
  enterRule(_localctx, 6, NPCScriptParser::RuleOnEvent);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(NPCScriptParser::T__3);
    setState(62);
    match(NPCScriptParser::STRING);
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 137445532480) != 0)) {
      setState(63);
      statement();
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(69);
    match(NPCScriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

NPCScriptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NPCScriptParser::IfStatementContext* NPCScriptParser::StatementContext::ifStatement() {
  return getRuleContext<NPCScriptParser::IfStatementContext>(0);
}

NPCScriptParser::WhileStatementContext* NPCScriptParser::StatementContext::whileStatement() {
  return getRuleContext<NPCScriptParser::WhileStatementContext>(0);
}

NPCScriptParser::ActionStatementContext* NPCScriptParser::StatementContext::actionStatement() {
  return getRuleContext<NPCScriptParser::ActionStatementContext>(0);
}

NPCScriptParser::AssignmentContext* NPCScriptParser::StatementContext::assignment() {
  return getRuleContext<NPCScriptParser::AssignmentContext>(0);
}

NPCScriptParser::SayStatementContext* NPCScriptParser::StatementContext::sayStatement() {
  return getRuleContext<NPCScriptParser::SayStatementContext>(0);
}

NPCScriptParser::ChoiceStatementContext* NPCScriptParser::StatementContext::choiceStatement() {
  return getRuleContext<NPCScriptParser::ChoiceStatementContext>(0);
}

NPCScriptParser::WaitStatementContext* NPCScriptParser::StatementContext::waitStatement() {
  return getRuleContext<NPCScriptParser::WaitStatementContext>(0);
}

NPCScriptParser::TransitionStatementContext* NPCScriptParser::StatementContext::transitionStatement() {
  return getRuleContext<NPCScriptParser::TransitionStatementContext>(0);
}

NPCScriptParser::EmotionStatementContext* NPCScriptParser::StatementContext::emotionStatement() {
  return getRuleContext<NPCScriptParser::EmotionStatementContext>(0);
}

NPCScriptParser::AnimationStatementContext* NPCScriptParser::StatementContext::animationStatement() {
  return getRuleContext<NPCScriptParser::AnimationStatementContext>(0);
}


size_t NPCScriptParser::StatementContext::getRuleIndex() const {
  return NPCScriptParser::RuleStatement;
}

void NPCScriptParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void NPCScriptParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any NPCScriptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::StatementContext* NPCScriptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 8, NPCScriptParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(71);
      ifStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(72);
      whileStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(73);
      actionStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(74);
      assignment();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(75);
      sayStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(76);
      choiceStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(77);
      waitStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(78);
      transitionStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(79);
      emotionStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(80);
      animationStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

NPCScriptParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NPCScriptParser::ConditionContext* NPCScriptParser::IfStatementContext::condition() {
  return getRuleContext<NPCScriptParser::ConditionContext>(0);
}

tree::TerminalNode* NPCScriptParser::IfStatementContext::STRING() {
  return getToken(NPCScriptParser::STRING, 0);
}


size_t NPCScriptParser::IfStatementContext::getRuleIndex() const {
  return NPCScriptParser::RuleIfStatement;
}

void NPCScriptParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}

void NPCScriptParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}


std::any NPCScriptParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::IfStatementContext* NPCScriptParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, NPCScriptParser::RuleIfStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(NPCScriptParser::T__5);
    setState(84);
    condition();
    setState(85);
    match(NPCScriptParser::T__6);
    setState(86);
    match(NPCScriptParser::T__7);
    setState(87);
    match(NPCScriptParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStatementContext ------------------------------------------------------------------

NPCScriptParser::WhileStatementContext::WhileStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NPCScriptParser::ConditionContext* NPCScriptParser::WhileStatementContext::condition() {
  return getRuleContext<NPCScriptParser::ConditionContext>(0);
}

std::vector<NPCScriptParser::StatementContext *> NPCScriptParser::WhileStatementContext::statement() {
  return getRuleContexts<NPCScriptParser::StatementContext>();
}

NPCScriptParser::StatementContext* NPCScriptParser::WhileStatementContext::statement(size_t i) {
  return getRuleContext<NPCScriptParser::StatementContext>(i);
}


size_t NPCScriptParser::WhileStatementContext::getRuleIndex() const {
  return NPCScriptParser::RuleWhileStatement;
}

void NPCScriptParser::WhileStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileStatement(this);
}

void NPCScriptParser::WhileStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileStatement(this);
}


std::any NPCScriptParser::WhileStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitWhileStatement(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::WhileStatementContext* NPCScriptParser::whileStatement() {
  WhileStatementContext *_localctx = _tracker.createInstance<WhileStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, NPCScriptParser::RuleWhileStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(NPCScriptParser::T__8);
    setState(90);
    condition();
    setState(91);
    match(NPCScriptParser::T__9);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 137445532480) != 0)) {
      setState(92);
      statement();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(NPCScriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TransitionStatementContext ------------------------------------------------------------------

NPCScriptParser::TransitionStatementContext::TransitionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NPCScriptParser::TransitionStatementContext::STRING() {
  return getToken(NPCScriptParser::STRING, 0);
}


size_t NPCScriptParser::TransitionStatementContext::getRuleIndex() const {
  return NPCScriptParser::RuleTransitionStatement;
}

void NPCScriptParser::TransitionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTransitionStatement(this);
}

void NPCScriptParser::TransitionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTransitionStatement(this);
}


std::any NPCScriptParser::TransitionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitTransitionStatement(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::TransitionStatementContext* NPCScriptParser::transitionStatement() {
  TransitionStatementContext *_localctx = _tracker.createInstance<TransitionStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, NPCScriptParser::RuleTransitionStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(NPCScriptParser::T__7);
    setState(101);
    match(NPCScriptParser::STRING);
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NPCScriptParser::T__10) {
      setState(102);
      match(NPCScriptParser::T__10);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

NPCScriptParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NPCScriptParser::AssignmentContext::IDENTIFIER() {
  return getToken(NPCScriptParser::IDENTIFIER, 0);
}

NPCScriptParser::ExprContext* NPCScriptParser::AssignmentContext::expr() {
  return getRuleContext<NPCScriptParser::ExprContext>(0);
}


size_t NPCScriptParser::AssignmentContext::getRuleIndex() const {
  return NPCScriptParser::RuleAssignment;
}

void NPCScriptParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void NPCScriptParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


std::any NPCScriptParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

NPCScriptParser::AssignmentContext* NPCScriptParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 16, NPCScriptParser::RuleAssignment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(NPCScriptParser::IDENTIFIER);
    setState(106);
    match(NPCScriptParser::T__11);
    setState(107);
    expr(0);
    setState(109);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NPCScriptParser::T__10) {
      setState(108);
      match(NPCScriptParser::T__10);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SayStatementContext ------------------------------------------------------------------

NPCScriptParser::SayStatementContext::SayStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NPCScriptParser::SayStatementContext::STRING() {
  return getToken(NPCScriptParser::STRING, 0);
}


size_t NPCScriptParser::SayStatementContext::getRuleIndex() const {
  return NPCScriptParser::RuleSayStatement;
}

void NPCScriptParser::SayStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSayStatement(this);
}

void NPCScriptParser::SayStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NPCScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSayStatement(this);
}


std::any NPCScriptParser::SayStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NPCScriptVisitor*>(visitor))
    return parserVisitor->visitSayStatement(this);
  else
    return visitor->visitChildren(this);
}
